fix: 엔드포인트에 맞는 에러 스키마 추가
